Succesfuly made the applictaion to connect with Mysql by installing dotenv cors and nodemon

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
+# This is basicaly for security purposes
 HOST = localhost
 USER = root
 PASSWORD = 
-DATABASE = studentdb-MySQL
+DATABASE = studentdb/MySQL
