Worked on the student Controllers

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# This is basicaly for security purposes
+# This is basicaly for storing variables in the db and securing them
 HOST = localhost
 USER = root
 PASSWORD = 
